@startuml
left to right direction

title Blog class diagram

class Comment {
    - id: uuidv4
    - content: string
    - createdAt: datetime
    - postId: uuidv4
    - enabled: boolean
    - userId: uuidv4
    - User: User
    - Post: Post
}

class User {
    - id: uuidv4
    - username: string
    - email: string
    - password: string
    - plainPassword: string
    - rememberToken: string
    - enabled: boolean
    - isAdmin: boolean
    - resetToken: string
}

class Post {
    - id: uuidv4
    - title: string
    - filename: string
    - file: UploadedFile
    - content: string
    - excerpt: string
    - slug: string
    - createdAt: datetime
    - updatedAt: datetime
    - userId: uuidv4
    - User: User
    - comments: Comment[]
}


' Relations

Post "1" *.. "0,n" Comment : contains

User "1" <--> "0,n" Post : publish
User "0,1" <--> "0,n" Comment : add

@enduml
